--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,8 @@
         "test": [
             "@php artisan config:clear --ansi",
             "@php artisan test"
-        ]
+        ],
+        "start": "php artisan serve --host 0.0.0.0 --port ${PORT:-8000}"
     },
     "extra": {
         "laravel": {
