--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi",
-            "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
+            "@php -r \"file_exists('database/database.mysql') || touch('database/database.mysql');\"",
             "@php artisan migrate --graceful --ansi"
         ],
         "dev": [
