--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Railstation
 APP_ENV=production
-APP_KEY=base64:EJc5cQ/zFtH68U9F5uQVlz1rm0Hrm8hao2pjM0Q7008=
+APP_KEY=base64:nbiYhez0k0/cQucd9+aQN8/OaF+A4GrVjBwelJ7KYb4=
 APP_DEBUG=false
-APP_URL=https://railstation.up.railway.app
+APP_URL=http://localhost
 
 APP_LOCALE=id
 APP_FALLBACK_LOCALE=id
